# VU-Thesis

./: .gitattributes  .gitmodules  README.md  journal.md
doc/: TPS65094_BUCK3-4_values.txt  notes.md
docs/: notes.md
firmware/: .gitignore  CMakeLists.txt  glitch.c  glitch.h  main.c  picocoder.h
firmware/inject_v1_MAGIC_SMOKE/: CMakeLists.txt
firmware/inject_v2/: CMakeLists.txt  README.md  cmd.h  glitch.c  glitch.h  main.c  picocoder.h  pmbus.h  spi.c  spi.h  target_uart.c  target_uart.h
firmware/picocoder/: .gitignore  README.md  glitch.h  main.c  picocoder.h
hardware/UPSquared/: README.md  notes.md
hardware/UPSquared/img/modded/: pico.fzz
hardware/pico/: README.md
hardware/pico/glitcher-v1/: schematic.kicad_pro  schematic.kicad_sch  sym-lib-table
hardware/pico/glitcher-v2/: glitcher-v2.kicad_prl  glitcher-v2.kicad_pro  glitcher-v2.kicad_sch
notebooks/: .gitattributes  .gitignore  README.md  base.ipynb  data_collector.py  glitch2.db  glitch2.db_PLACEHOLDER  glitch_utils.py  mayavi_plot.py  plot_from_db.ipynb  power_supply.py  test_glitch.py  test_voltage.py
notebooks/imgs/pmic/: TPS65094_BUCK1-2-5-6_values.txt
notebooks/picocoder_client/: __init__.py  glitch_targets.py  picocoder.py  power_supply.py
picocoder_py/: glitch_targets.py  picocoder.py
pmbus_inject_glitch_fw/: CMakeLists.txt  i2c_voltage_plotter.py  pmbus_inject_glitch_fw.c  pmbus_inject_glitch_fw.h
target_asm_snippets/: cmp.c  imul.c  load.c
ucode/: 06-5c-0a.txt  06-5c-0a_mod.patch_0001.txt  06-5c-0a_patch.txt  06-5c-0a_patched.dec  06-5c-0a_patched_re_encrypt_nop_add  06-5c-0a_signature_change  06-5c-0a_signed  xor_compatible_opcodes.py
ucode/patch_ucode/: patch.py  patch_blind.py  update_key
ucode_update_mod/: 06-5c-0a.dec  06-5c-0a.patch_0001.txt  06-5c-0a.txt  06-5c-0a_mod  06-5c-0a_mod.dec  06-5c-0a_mod.patch_0001.txt  06-5c-0a_mod.txt  06-5c-0a_patch.patch_0001.txt  06-5c-0a_rsamod  06-5c-0a_signed.txt  patch_blind.py
ucode_update_mod/patch_ucode/: README.MD  patch_n_sign.py  resign.py
